[package]
name = "whim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_html = "2.4.0"
glob = "0.3.1"
pulldown-cmark = "0.9.3"
ron = "0.8.0"
serde = { version = "1.0.171", features = ["derive"] }
time = { version = "0.3.23", features = ["std", "alloc", "local-offset", "serde"] }
